crates/openpit-derive/tests/ui/fail/derive_on_enum.stderr
error: RequestFields can only be derived for structs
 --> tests/ui/fail/derive_on_enum.rs:6:6
  |
6 | enum Wrapper {
  |      ^^^^^^^
